<resources>
    <string name="app_name">DS Box Next</string>
    <string name="name">DS Box Next</string>
    <string name="splash_slogan">Box costing \n at your fingertips!</string>
    <string name="device_name">Device Name</string>
    <string name="verify_phone_number">Verify Your Phone Number</string>
    <string name="sms_text">DS Box Next will send an SMS message to verify your phone
    number,Please enter your Country Code and Phone number.</string>
    <string name="country_code">Country Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="next_button">Next</string>
    <string name="t_and_c">Terms and Privacy Policy</string>
    <string name="estimates">Estimates</string>
    <string name="clients">Clients</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_multi_users">Enable Multiple Users</string>
    <string name="enable_multi_users_text">Allow you to create multiple users for the same business, where estimates and clients are shared across users.</string>
    <string name="enable_multi_users_text_2">You can create maximum 5 users.</string>
    <string name="switch_button_on">On</string>
    <string name="switch_button_off">Off</string>
    <string name="super_user">Super User Settings</string>
    <string name="settings">Settings</string>
    <string name="business_settings">Business Settings</string>
    <string name="business_settings_name_contact_address">Business Name,Contact No,Address</string>
    <string name="default_paper_settings">Default Paper Settings</string>
    <string name="default_paper_settings_margins_ff_etc">Margins,FF,etc.</string>
    <string name="default_rate_settings">Default Rate Settings</string>
    <string name="default_rate_settings_waste">Waste,Conversion Rate,Overhead Charges \n Profit,Tax,etc.</string>
    <string name="quotation_terms_settings">Quotation Terms</string>
    <string name="quotation_terms_settings_terms">Terms and conditions for estimate.</string>
    <string name="subscription_settings">Subscription</string>
    <string name="help">Help</string>
    <string name="log_out">LogOut</string>
    <string name="business_details">Business Details</string>
    <string name="business_name">Business Name</string>
    <string name="business_contact">Business Contact</string>
    <string name="business_address">Business Address</string>
    <string name="business_pinCode">Business PinCode</string>
    <string name="business_email">Business Email</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="cutting_margin">Cutting Margin (mm)</string>
    <string name="decal_margin">Decal Margin (mm)</string>
    <string name="flute_factor">Flute Factor (FF)</string>
    <string name="waste">Waste %</string>
    <string name="conversion_cost">Conversion Cost/KG</string>
    <string name="profit">Profit % </string>
    <string name="tax">Tax % </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="quotation_new_line_text">For New line use | Vertical slash character also called as pipe,
         piping symbol to view New Line in Quotation PDF</string>
    <string name="new_client">New Clients Details</string>
    <string name="new_clients_this_info">This information will show on your \n
    estimates, quotations</string>
    <string name="client_name">Client Name</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="user_details">User Details</string>
    <string name="user_name">User Name</string>
    <string name="device_info">Device Info</string>
    <string name="update">Update</string>
    <string name="for_help_contact">For Help Contact Support</string>
    <string name="help_contact_no">9421013332</string>
    <string name="box_name">Box Name</string>
    <string name="box_dimensions">Box Dimensions</string>
    <string name="price">Price</string>
    <string name="enter_box_name">Enter Box Name</string>
    <string name="enter_box_outer_dimensions">Enter Box Outer Dimensions</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="mm">mm</string>
    <string name="cm">cm</string>
    <string name="inch">inch</string>
    <string name="number_of_ply">Number Of Ply</string>
    <string name="box_number">Enter Box Number</string>
    <string name="sheet_details">Sheet Details</string>
    <string name="cutting_length">Cutting Length</string>
    <string name="cutting_length_mm">Cutting Length(mm)</string>
    <string name="decal_Size">Decal Size</string>
    <string name="decal_Size_mm">Decal Size(mm)</string>
    <string name="top_paper">Top Paper</string>
    <string name="bottom_paper">Bottom Paper</string>
    <string name="flute_paper">Flute Paper</string>
    <string name="bf">BF</string>
    <string name="ff">FF</string>
    <string name="gsm">GSM</string>
    <string name="rate_kg">Rate/Kg</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="total_gsm">Total GSM</string>
    <string name="total_bs">Total BS</string>
    <string name="total_weight">Total Weight</string>
    <string name="net_paper_cost">Net Paper Cost</string>
    <string name="waste_cost">Waste Cost</string>
    <string name="gross_paper_cost_formula">Gross Paper Cost = Net Paper Cost + \n Waste Cost</string>
    <string name="gross_paper_cost">Gross Paper Cost</string>
    <string name="conv_cost_kg">Conv.Cost/Kg</string>
    <string name="over_head_charges">OverHead Charges</string>
    <string name="over_head_charges_formula">Overhead Charges =Printing+Lamination+Transport+Others(all per box)</string>
    <string name="box_mfg_cost_formula">Box Mfg Cost=Gross Paper Cost+Conversion Cost+Overhead Charges</string>
    <string name="box_mgf_cost">Box MFG Cost</string>
    <string name="box_price">Box Price</string>
    <string name="box_price_with_tax">Box Price with Tax</string>
    <string name="no_of_boxes_ups">No of Box (ups)</string>
    <string name="conv_kg">Conv/Kg</string>
    <string name="conv_cost">Conv.Cost</string>
    <string name="paper_cost">Paper Cost</string>
    <string name="overhead">Overhead</string>
    <string name="box_mfg_cost">Box MFG.Cost</string>
    <string name="price_Incl">Price Incl.Tax</string>
    <string name="quotation">Quotation </string>
    <string name="production">Production </string>
    <string name="edit">Edit </string>
    <string name="delete">Delete </string>
    <string name="ply">Ply</string>
    <string name="rate">Rate</string>
    <string name="top">Top</string>
    <string name="flute_one">Flute 1</string>
    <string name="middle_one">Middle 1</string>
    <string name="flute_two">Flute 2</string>
    <string name="middle_two">Middle 2</string>
    <string name="flute_three">Flute 3</string>
    <string name="bottom">Bottom</string>
    <string name="zero">0</string>
    <string name="dash">-</string>
    <string name="box_quantity">Box Quantity</string>
    <string name="create_pdf">Create PDF</string>
    <string name="enable_paper_specification">Enable Paper Specification</string>
    <string name="enable_paper_specification_text">Display Paper specification of each ply with BF and GSM in Quotation.</string>
    <string name="enable_tax_and_price">Enable Tax with Price</string>
    <string name="enable_tax_and_price_text">Display Tax percentage and Tax with Price in Quotation.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_sms_text">We have sent you an OTP \n for phone number verification.</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="enter_business_details">Enter Business Details</string>
    <string name="enter_business_details_text">This information will show on your \n estimates, quotations</string>
    <string name="client_details">Client Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="contact_support">Contact Support : </string>
    <string name="package_details">Package Details</string>
    <string name="copyright">Copyright© 2020 Disha Swaraj Soft.All rights reserved.</string>
    <string name="monthly">Monthly</string>
    <string name="_149_inr">₹149 INR</string>
    <string name="yearly_single_user">Yearly Single User</string>
    <string name="_999_inr">₹999 INR</string>
    <string name="yearly_multiuser">Yearly Multiuser</string>
    <string name="_1799_inr">₹1799 INR</string>
    <string name="payment_details">Payment Details</string>
    <string name="account_details">Account Details</string>
    <string name="a_c_name">A/C Name</string>
    <string name="disha_swarajsoft">Disha SwarajSoft</string>
    <string name="a_c_no">A/C NO</string>
    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="bank_name">Bank Name</string>
    <string name="hdfc_bank">HDFC Bank</string>
    <string name="ifsc">IFSC</string>
    <string name="hdfc0002988">HDFC0002988</string>
    <string name="branch">Branch</string>
    <string name="uruli_kanchan_pune">Uruli-Kanchan,Pune</string>
    <string name="a_c_type">A/C Type</string>
    <string name="current_account">Current Account</string>
    <string name="_18_noct_23">18/10/23</string>
    <string name="rs_100_00">Rs. 100.00</string>
    <string name="user_access">User Access</string>
    <string name="middle_one_paper">Middle One Paper</string>
    <string name="flute_two_paper">Flute Two Paper</string>
    <string name="middle_two_paper">Middle Two Paper</string>
    <string name="flute_three_paper">Flute Three Paper</string>
    <string name="sub_status">Subscription Status:</string>
    <string name="no_estimates_add_one">No Estimates Add One</string>
    <string name="your_active_subscription_has_ended">Your Active Subscription has ended.\n
    Please,Upgrade Your Premium Membership</string>
    <string name="upgrade_membership">UPGRADE MEMBERSHIP</string>
    <string name="conti_nue">CONTINUE</string>
    <string name="go_premium">Go Premium</string>
    <string name="add_new_users">Add New Users</string>
    <string name="title_estimates">Estimates</string>
    <string name="title_clients">Clients</string>
    <string name="title_profile">Profile</string>
    <string name="subscription_till">Subscription till</string>
    <string name="lblnoapplicationfound">There is no app installed on device to open this PDF file.</string>
    <string name="bt_update">Update</string>
    <string-array name="noOfPly">
        <item>1Ply</item>
        <item>2Ply</item>
        <item>3Ply</item>
        <item>5Ply</item>
        <item>7Ply</item>
        <item>2Ply(KG)</item>
    </string-array>
</resources>