<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/subPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/DSTextLargeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/go_premium"
        android:textColor="@color/cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivsub"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/sub_renew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivsub">

        <TextView
            style="@style/DSTextMediumBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/your_active_subscription_has_ended" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btUpgradeSub"
            style="@style/DSTextMediumBold"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/upgrade_membership">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btContinue"
            style="@style/DSTextMediumBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/conti_nue"
            android:layout_marginBottom="@dimen/margin_medium">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>